tests/test122.rael.exp
Error [3:10]: factorial expects positive numbers
|         ^blame "factorial expects positive numbers"
|          ^
